# CrossWord-Generator

./: CMakeCache.txt  CMakeLists.txt  Crossword_Generator  Makefile  README.md  cmake_install.cmake  crossword.txt  libraryWords.txt
include/: attribute.h  grid.h  library.h  point.h  slot.h  solver.h  span.h  utilities.h  word.h
src/: grid.cpp  library.cpp  main.cpp  point.cpp  slot.cpp  solver.cpp  span.cpp  utilities.cpp
